objects/Drawdowns__c.object
<CustomObject>
    <description>SFA-286 to record client drawdowns as they occur</description>
    <fields>
        <fullName>CommitmentFees__c</fullName>
        <description>Commitment Fees from the RPF Calculator (reporting purposes)</description>
        <label>Commitment Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeferredFees__c</fullName>
        <description>Deferred Fees as found in the RPF Calculator (for reporting purposes only)</description>
        <label>Deferred Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdown_Amount__c</fullName>
        <label>Drawdown Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drawdown_date__c</fullName>
        <label>Drawdown date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NetMargin__c</fullName>
        <description>Net Margin value that comes out of the RPF Calculator</description>
        <label>Net Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Drawdown_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductLevel2List__c</fullName>
        <description>Gives the ProductLevel2 of the related opportunity</description>
        <formula>Opportunity__r.ProductLevel2List__c</formula>
        <inlineHelpText>Gives the ProductLevel2 of the related opportunity</inlineHelpText>
        <label>ProductLevel2List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpfrontFees__c</fullName>
        <description>Upfront Fees as found in RPF Calculator (for reporting purposes only)</description>
        <label>Upfront Fees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isExternal__c</fullName>
        <description>Field to determine if this Opportunity was pushed to Salesforce via API from external system (eg. Oberon)</description>
        <formula>Opportunity__r.isExternal__c</formula>
        <inlineHelpText>Field to determine if this Opportunity was pushed to Salesforce via API from external system (eg. Oberon)</inlineHelpText>
        <label>isExternal</label>
        <type>Checkbox</type>
    </fields>
    <label>Drawdown</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Drawdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drawdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DrawDown_on_an_External_Opportunity</fullName>
        <active>true</active>
        <description>Disallow the edit or create of a Drawdown should it come from an External Opportunity</description>
        <errorConditionFormula>AND
(
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Barclays Administrator&apos;, 
isExternal__c
)</errorConditionFormula>
        <errorMessage>Cannot add or edit drawdowns on an opportunity created from an external system</errorMessage>
    </validationRules>
</CustomObject>